2008-09-19  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Code refactoring, move util functions to
	  scorerender-utils.php
	* class.scorerender.inc.php -> scorerender-class.php
	* Other include files moved to notation/ folder

2008-09-18  Abel Cheung  <abelcheung@gmail.com>

	* class.*.inc.php: Moved to notation/ subdirectory.
	* wp-scorerender.php: Updated file locations to reflect file move.

2008-09-18  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_update_options) Fix bug: IE transparency warning option
	  can't be turned off once it is turned on.

2008-09-18  Abel Cheung  <abelcheung@gmail.com>

	* class.{pmw,lilypond,abc,mup}.inc.php:
	- Don't add stderr redirection, let _exec handle that.

	* class.scorerender.inc.php:
	- (create_temp_dir) Set default argument for 1st argument.
	- (_exec) Create batch file for Windows before execution, to
	  circumvent stupid exec bug.

2008-09-16  Abel Cheung  <abelcheung@gmail.com>

	* class.pmw.inc.php: Fix ImageMagick and PMW command invocation.
	* wp-scorerender.php, class.scorerender.inc.php: Allows crude debugging.

2008-09-16  Abel Cheung  <abelcheung@gmail.com>

	* class.pmw.inc.php: New file for Philip's Music Writer support.
	* wp-scorerender.php: Add changes necessary for PMW support.

2008-09-16  Abel Cheung  <abelcheung@gmail.com>

	* class.scorerender.inc.php:
	- (create_temp_dir) Fix usage and parent directory name.

	* class.{guido,scorerender}.inc.php:
	- Hide unimportant errors.

2008-09-16  Abel Cheung  <abelcheung@gmail.com>

	* class.{abc,mup,lilypond,scorerender}.inc.php:
	- Quote command line arguments properly (yes, PHP Win32 does not support
	  quoting commands at least since 4.3.x)

	* wp-scorerender.php: All sort of Win32 fixes.
	- (get_path_presentation) New func. Convert slash <-> backslash in paths.
	- (transform_paths) New func. Convert path slashes in settings.
	- (is_absolute_path) New func. Self-explanatory.